# interview_ai

./: .env.example  .gitignore  .graphifyignore  .prettierignore  AUDIT_REPORT.md  README.md  REALTIME_ROADMAP.md  REMAINING_BUILD_PROMPT.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  knowledge_base.json  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.e2e.json  tsconfig.test.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-push
docs/: EVALS.md  PARAKEET_PARITY_STATUS.md  PRODUCTION_BASE.md
docs/superpowers/plans/: 2026-04-17-meetingmind-mvp.md
docs/superpowers/specs/: 2026-04-17-meetingmind-design.md
e2e/: README.md  hotkeys.spec.ts  onboarding.spec.ts  settings.spec.ts  share-guard.spec.ts  smoke.spec.ts  tauri-driver.config.ts
e2e/native/: smoke.native.spec.ts
fixtures/evals/: expected-baseline.json
graphify-out/: .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  GRAPH_REPORT.md  graph.html  graph.json
public/: pcm-capture.worklet.js
scripts/: start-graphify-watch.ps1  test-groq-stt.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/src/: commands.rs  db.rs  lib.rs  models.rs  window_manager.rs
src-tauri/src/audio/: local_stt.rs  mic_capture.rs  mod.rs  vad.rs  wasapi_capture.rs  whisper_stt.rs
src-tauri/src/commands/: capture_exclusion.rs  click_through.rs  keychain.rs  meeting_daemon.rs  monitor_info.rs  native_ocr.rs
src/app/: routes.tsx  windowRole.ts
src/components/: AppErrorBoundary.tsx  useAsyncErrorBoundary.ts
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  CommandPalette.tsx  Dialog.tsx  Divider.tsx  EmptyState.tsx  IconButton.tsx  Input.tsx  KeyHint.tsx  ScrollArea.tsx  SegmentedControl.tsx  Select.tsx  Skeleton.tsx  Spinner.tsx  StatusDot.tsx  Tabs.tsx  Tag.tsx  Textarea.tsx  Toast.tsx  Toggle.tsx  Tooltip.tsx  index.ts  useToast.ts
src/features/companion/: CompanionWindow.tsx  companion.css
src/features/dashboard/: ActionItemsPage.tsx  CodingAssistPage.tsx  DashboardWindow.tsx  IntegrationsPage.tsx  JobDescriptionPage.tsx  KnowledgeBasePage.tsx  LocalWhisperPanel.tsx  MockInterviewPage.tsx  OnboardingPage.tsx  OperationsPage.tsx  ResumeBuilderPage.tsx  SessionDetailPage.tsx  SessionHistoryPage.tsx  SessionTimeline.tsx  SettingsPage.tsx  ShareGuardDashboard.tsx  ShareGuardPage.tsx  actions.css  coding.css  dashboardShell.css  integrations.css  jd.css  jobDescription.css  knowledge.css  mock.css  mockInterview.css  onboarding.css  operations.css  resume.css  resumeBuilder.css  sessions.css  settings.css  shareguard.css
src/features/overlay/: AIChatOverlay.tsx  CaptureExcludedOverlay.tsx  ChatPanel.tsx  OverlayWindow.tsx  QuestionCard.tsx  SolutionCard.tsx  TranscriptFeed.tsx  aiChat.css  chat.css  overlay.css  transcript.css  useDraggable.ts
src/fixtures/: demoKnowledge.ts  mockCallTranscript.ts
src/lib/: auditLogger.ts  hotkeyCatalog.ts  logger.ts  piiRedactor.ts  sanitize.ts  tauri.ts
src/lib/audio/: silero-vad.ts
src/lib/coding/: codingAssistant.ts
src/lib/copilot/: answerComposer.ts  answerScorer.ts  codingSolver.ts  jdMatcher.ts  jsonRepair.ts  memoryExtractor.ts  questionDetector.ts  resumeBuilder.ts  resumeProfile.ts  starEngine.ts  summarizer.ts  systemDesignEngine.ts  tokenBudget.ts  visionSolver.ts
src/lib/integrations/: connectorAdapters.ts  oauthRefresh.ts
src/lib/interview/: questionBank.ts
src/lib/providers/: aiProvider.ts  anthropicProvider.ts  cerebrasProvider.ts  contracts.ts  deepgramSttProvider.ts  groqProvider.ts  languageCodes.ts  localDemoProvider.ts  (+8 more)
src/store/: integrationStore.ts  overlayStore.ts  sessionStore.ts  settingsStore.ts
src/test/: setup.ts
tests/: ai-chat-overlay.test.tsx  answer-composer-runtime.test.ts  app-shell.test.tsx  audit-events.test.ts  audit-logger.test.ts  coding-assistant.test.ts  connector-adapters.test.ts  copilot.test.ts  data-maintenance.test.ts  knowledge-base.test.ts  meeting-detector.test.ts  meeting-memory.test.ts  native-persistence-bridge.test.ts  overlay-answer-card.test.tsx  provider-factory.test.ts  resume-profile.test.ts  runtime-config.test.ts  session-runtime.test.ts  share-guard-dashboard.test.tsx  share-guard.test.ts  stores.test.ts  tauri-bridge.test.ts  tauri-native-bridge.test.ts  transcript-simulator.test.ts
(+17 files in other folders)
