[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
hex = "0.4"
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
screenshots = "0.8"
rand = "0.8"

# Local Whisper STT (Gap 1). Optional because building whisper.cpp pulls a
# C++ toolchain plus libclang for bindgen. Enable with:
#   cargo build --features local-whisper
# Toolchain prerequisites by platform:
#   Windows: Visual Studio 2022 Build Tools (MSVC) + LLVM (clang) on PATH,
#            with LIBCLANG_PATH set to its `bin` dir. winget install LLVM.LLVM
#   macOS:   xcode-select --install; libclang ships with the toolchain.
#   Linux:   apt install build-essential clang libclang-dev cmake
# Distributors who don't want the native C++ build can ship without this and
# fall back to cloud STT (Groq) — the runtime detects model availability
# at startup via `check_local_stt_available()` and `LocalSttProvider`
# transparently routes to the cloud path until the user installs a model.
whisper-rs = { version = "0.16", optional = true }
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_Media_KernelStreaming",
  # Native OCR via Windows.Media.Ocr (built into Windows 10+).
  "Foundation",
  "Foundation_Collections",
  "Globalization",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage_Streams",
] }
raw-window-handle = "0.6"

[features]
default = []
local-whisper = ["dep:whisper-rs"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
